--- a/src/translations/pl.json
+++ b/src/translations/pl.json
@@ -1,3 +1,21 @@
 {
-  "hi": "Cześć"
+  "hi": "Cześć",
+  "error_while_logging_in": "Wystąpił błąd podczas logowania",
+  "dark": "Ciemny",
+  "light": "Jasny",
+  "system": "Systemowy",
+  "change_theme": "Zmień motyw",
+  "log_out": "Wyloguj się",
+  "playlist": "Playlista \"{name}\"",
+  "shuffle": "Wymieszaj",
+  "could_not_shuffle_playlist": "Nie udało się wymieszać playlisty",
+  "successfully_shuffled_playlist": "Pomyślnie wymieszano playlistę",
+  "successfully_shuffled_playlist_without_name": "Pomyślnie wymieszano playlistę",
+  "shuffle_options_date_playlist_desc": "Po dacie dodania do playlisty (od najmłodszych)",
+  "shuffle_options_date_playlist_asc": "Po dacie dodania do playlisty (od najstarszych)",
+  "shuffle_options_length_asc": "Po długości piosenki (rosnąco)",
+  "shuffle_options_length_desc": "Po długości piosenki (malejąco)",
+  "shuffle_options_popular": "Po najpopularniejszych",
+  "shuffle_options_random": "Losowo",
+  "gebraryz_spotify_playlists_shuffler": "Shuffler playlist Spotify by gebraryz"
 }
