Organize code to make it more readable, improve performance, add missing translation

--- a/src/translations/pl.json
+++ b/src/translations/pl.json
@@ -1,22 +1,23 @@
 {
-  "hi": "Cześć",
-  "error_while_logging_in": "Wystąpił błąd podczas logowania",
-  "dark": "Ciemny",
-  "light": "Jasny",
-  "system": "Systemowy",
+  "app_description": "Narzędzie, które umożliwia łatwe mieszanie i organizowanie utworów w playlistach na Spotify.",
+  "app_title": "Shuffler playlist Spotify by gebraryz",
   "change_theme": "Zmień motyw",
+  "could_not_shuffle_playlist": "Nie udało się wymieszać playlisty",
+  "dark": "Ciemny",
+  "error_while_logging_in": "Wystąpił błąd podczas logowania",
+  "hi": "Cześć",
+  "light": "Jasny",
   "log_out": "Wyloguj się",
   "playlist": "Playlista \"{name}\"",
   "shuffle": "Wymieszaj",
-  "could_not_shuffle_playlist": "Nie udało się wymieszać playlisty",
-  "successfully_shuffled_playlist": "Pomyślnie wymieszano playlistę",
-  "successfully_shuffled_playlist_without_name": "Pomyślnie wymieszano playlistę",
-  "shuffle_options_date_playlist_desc": "Po dacie dodania do playlisty (od najmłodszych)",
   "shuffle_options_date_playlist_asc": "Po dacie dodania do playlisty (od najstarszych)",
+  "shuffle_options_date_playlist_desc": "Po dacie dodania do playlisty (od najmłodszych)",
   "shuffle_options_length_asc": "Po długości piosenki (rosnąco)",
   "shuffle_options_length_desc": "Po długości piosenki (malejąco)",
   "shuffle_options_popular": "Po najpopularniejszych",
   "shuffle_options_random": "Losowo",
-  "app_title": "Shuffler playlist Spotify by gebraryz",
-  "app_description": "Narzędzie, które umożliwia łatwe mieszanie i organizowanie utworów w playlistach na Spotify."
+  "successfully_shuffled_playlist": "Pomyślnie wymieszano playlistę",
+  "successfully_shuffled_playlist_without_name": "Pomyślnie wymieszano playlistę",
+  "system": "Systemowy",
+  "total_tracks": "{count} utworów"
 }
