--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,21 +1,22 @@
 {
-  "hi": "Hi",
-  "error_while_logging_in": "Error while logging in",
-  "log_out": "Log out",
-  "dark": "Dark",
-  "light": "Light",
-  "system": "System",
+  "app_description": "Tool that allows you to easily mix and organize tracks in your Spotify playlists.",
+  "app_title": "gebraryz's Spotify Playlists Shuffler",
   "change_theme": "Change theme",
+  "could_not_shuffle_playlist": "Could not shuffle playlist",
+  "dark": "Dark",
+  "error_while_logging_in": "Error while logging in",
+  "hi": "Hi",
+  "light": "Light",
+  "log_out": "Log out",
   "playlist": "\"{name}\" playlist",
   "shuffle": "Shuffle",
-  "could_not_shuffle_playlist": "Could not shuffle playlist",
-  "successfully_shuffled_playlist": "Successfully shuffled playlist",
-  "shuffle_options_date_playlist_desc": "By date added to playlist (descending)",
   "shuffle_options_date_playlist_asc": "By date added to playlist (ascending)",
+  "shuffle_options_date_playlist_desc": "By date added to playlist (descending)",
   "shuffle_options_length_asc": "By song length (ascending)",
   "shuffle_options_length_desc": "By song length (descending)",
   "shuffle_options_popular": "By popularity",
   "shuffle_options_random": "Randomly",
-  "app_title": "gebraryz's Spotify Playlists Shuffler",
-  "app_description": "Tool that allows you to easily mix and organize tracks in your Spotify playlists."
+  "successfully_shuffled_playlist": "Successfully shuffled playlist",
+  "system": "System",
+  "total_tracks": "{count} tracks"
 }
