Organize code again and add component for creating playlists on special dates

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -3,12 +3,13 @@
   "app_title": "gebraryz's Spotify Playlists Shuffler",
   "change_theme": "Change theme",
   "could_not_shuffle_playlist": "Could not shuffle playlist",
+  "create_playlist": "Create",
   "dark": "Dark",
   "error_while_logging_in": "Error while logging in",
   "hi": "Hi",
   "light": "Light",
   "log_out": "Log out",
-  "playlist": "\"{name}\" playlist",
+  "motivation_to_never_give_up": "Motivation to never give up",
   "shuffle": "Shuffle",
   "shuffle_options_date_playlist_asc": "By date added to playlist (ascending)",
   "shuffle_options_date_playlist_desc": "By date added to playlist (descending)",
