--- a/src/translations/pl.json
+++ b/src/translations/pl.json
@@ -3,12 +3,13 @@
   "app_title": "Shuffler playlist Spotify by gebraryz",
   "change_theme": "Zmień motyw",
   "could_not_shuffle_playlist": "Nie udało się wymieszać playlisty",
+  "create_playlist": "Utwórz",
   "dark": "Ciemny",
   "error_while_logging_in": "Wystąpił błąd podczas logowania",
   "hi": "Cześć",
   "light": "Jasny",
   "log_out": "Wyloguj się",
-  "playlist": "Playlista \"{name}\"",
+  "motivation_to_never_give_up": "Motywacja, by nigdy się nie poddawać",
   "shuffle": "Wymieszaj",
   "shuffle_options_date_playlist_asc": "Po dacie dodania do playlisty (od najstarszych)",
   "shuffle_options_date_playlist_desc": "Po dacie dodania do playlisty (od najmłodszych)",
