Add missing translations

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -5,11 +5,13 @@
   "could_not_shuffle_playlist": "Could not shuffle playlist",
   "create_playlist": "Create",
   "dark": "Dark",
+  "error_while_creating_playlist": "Error while creating playlist",
   "error_while_logging_in": "Error while logging in",
   "hi": "Hi",
   "light": "Light",
   "log_out": "Log out",
   "motivation_to_never_give_up": "Motivation to never give up",
+  "my_playlist": "My playlist",
   "shuffle": "Shuffle",
   "shuffle_options_date_playlist_asc": "By date added to playlist (ascending)",
   "shuffle_options_date_playlist_desc": "By date added to playlist (descending)",
@@ -17,6 +19,7 @@
   "shuffle_options_length_desc": "By song length (descending)",
   "shuffle_options_popular": "By popularity",
   "shuffle_options_random": "Randomly",
+  "successfully_added_playlist": "Successfully added playlist",
   "successfully_shuffled_playlist": "Successfully shuffled playlist",
   "system": "System",
   "total_tracks": "{count} tracks"
