--- a/src/translations/pl.json
+++ b/src/translations/pl.json
@@ -5,11 +5,13 @@
   "could_not_shuffle_playlist": "Nie udało się wymieszać playlisty",
   "create_playlist": "Utwórz",
   "dark": "Ciemny",
+  "error_while_creating_playlist": "Wystąpił błąd podczas tworzenia playlisty",
   "error_while_logging_in": "Wystąpił błąd podczas logowania",
   "hi": "Cześć",
   "light": "Jasny",
   "log_out": "Wyloguj się",
   "motivation_to_never_give_up": "Motywacja, by nigdy się nie poddawać",
+  "my_playlist": "Moja playlista",
   "shuffle": "Wymieszaj",
   "shuffle_options_date_playlist_asc": "Po dacie dodania do playlisty (od najstarszych)",
   "shuffle_options_date_playlist_desc": "Po dacie dodania do playlisty (od najmłodszych)",
@@ -17,6 +19,7 @@
   "shuffle_options_length_desc": "Po długości piosenki (malejąco)",
   "shuffle_options_popular": "Po najpopularniejszych",
   "shuffle_options_random": "Losowo",
+  "successfully_added_playlist": "Pomyślnie dodano playlistę",
   "successfully_shuffled_playlist": "Pomyślnie wymieszano playlistę",
   "successfully_shuffled_playlist_without_name": "Pomyślnie wymieszano playlistę",
   "system": "Systemowy",
