--- a/src/translations/pl.json
+++ b/src/translations/pl.json
@@ -10,10 +10,6 @@
     "hi": "Cześć"
   },
   "faq": {
-    "undo_changes": {
-      "question": "Czy mogę cofnąć zmiany po zrobieniu shuffle playlisty?",
-      "answer": "Niestety, po przetasowaniu playlisty nie ma możliwości cofnięcia zmian."
-    },
     "login_security": {
       "question": "Czy logowanie się do aplikacji jest bezpieczne?",
       "answer": "Tak, logowanie odbywa się automatycznie przez Spotify. Aplikacja ma dostęp tylko do danych, które udostępnia Spotify, czyli informacje o playlistach oraz publicznych informacji o koncie, co zapewnia bezpieczeństwo."
@@ -21,13 +17,33 @@
     "sorting_options": {
       "question": "Jakie są opcje sortowania?",
       "answer": "Aplikacja oferuje wiele opcji sortowania: według długości trwania piosenki, daty dodania piosenek do playlisty, popularności oraz losowo."
+    },
+    "undo_changes": {
+      "question": "Czy można cofnąć zmiany?",
+      "answer": "Nie, nie ma możliwości cofnięcia dokonanych zmian."
+    },
+    "mix_duration": {
+      "question": "Jak długo trwa mieszanie playlisty?",
+      "answer": "Czas trwania mieszania playlisty zależy od wybranej opcji oraz liczby piosenek na playliście. Proces ten może różnić się w zależności od wybranej opcji. Wiadome jest jednak to, że playlista wymiesza się szybciej, gdy zostanie wybrana opcja \"Losowo\"."
+    },
+    "changes_during_mix": {
+      "question": "Czy zmiany dokonane podczas mieszania playlisty zostaną zapisane, jeśli wyjdę ze strony w trakcie?",
+      "answer": "Tak, zmiany dokonane podczas mieszania playlisty zostaną zapisane. Po rozpoczęciu zmienia się kolejność utworów, a wyjście ze strony pozostawi zmiany, które zostały już dokonane."
+    },
+    "spotify_generated_playlists": {
+      "question": "Dlaczego nie można wymieszać playlist wygenerowanych przez Spotify?",
+      "answer": "Niektóre playlisty stworzone przez Spotify mogą być modyfikowane, a inne nie. Niestety, nie ma możliwości określenia, które playlisty można zmieniać, dlatego aplikacja wyświetla tylko playlisty stworzone przez użytkownika."
     }
+  },
+  "footer": {
+    "all_rights_reserved": "Wszelkie prawa zastrzeżone"
   },
   "loading": "Ładowanie",
   "playlist": {
     "name_placeholder": "Nazwa playlisty",
     "total_tracks": "{count} utworów",
     "create": "Utwórz",
+    "shuffle_progress": "Wymieszano {percent}%",
     "shuffle": "Wymieszaj",
     "success_while_creating_playlist": "utworzono playlistę",
     "success_while_shuffling_playlist": "Wymieszano playlistę",
@@ -50,8 +66,5 @@
     "light": "Jasny",
     "system": "Systemowy",
     "change": "Zmień motyw"
-  },
-  "footer": {
-    "all_rights_reserved": "Wszelkie prawa zastrzeżone"
   }
 }
